1.音乐部分页面优化

--- a/问题记录.md
+++ b/问题记录.md
@@ -1,15 +1,18 @@
 # 歌词动态展示部分
 
-## 问题描述:拖动或点击进度条时,如果拖动的播放时间在当前歌词中间,那么gsap的动画效果时间应该不一样,因此造成动画结束效果消失
+## 问题 --- 未解决
+1. :拖动或点击进度条时,如果拖动的播放时间在当前歌词中间,那么gsap的动画效果时间应该不一样,因此造成动画结束效果消失
+2. 同一歌词时间比较长的话,拖动却不到下一个歌词,这时候不会重新计算,因此还是需要拖动完成后计算
 
-### 解决思路
+
+### 解决思路 --- 废弃,还得考虑歌词索引变化引起的动画效果
 
 1. 获取拖动位置的currentTime,找到当前歌词
 2. 利用当前歌词索引找到下一句歌词,计算下一句歌词的出现时间,用currentTime减去下一句歌词的出现时间,得到时间差
 3. 根据时间差计算动画效果的时间
 
 
-### 最后处理方案
+### 最后处理方案 --- 目前暂时用这个方法
 1. 直接利用当前播放时间来计算动画效果时间,去tmd当前歌词时间
 ### 实现代码
 
